Fix UI alignments for mobile and search page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,7 @@
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
   --font-hind: "Hind Siliguri", sans-serif;
+  --font-poppins: var(--font-poppins);
 }
 
 :root {
